# rgserver

./: .gitignore  Dockerfile  README.md  license  pyproject.toml
ansible/: hosts
ansible/root_site/: docker-compose.yml  root_setup.yml
ansible/service_audiobookshelf/: abs_setup.yml  docker-compose.yml
ansible/traefik/: docker-compose.yml  traefik_setup.yml
ansible/wordpress/: docker-compose.yml  wordpress_setup.yml
src/: app.py
src/templates/: index.html
